--- a/app/components/header/Header.module.scss
+++ b/app/components/header/Header.module.scss
@@ -15,6 +15,16 @@
   justify-content: space-between;
   padding: 1.12rem 1.25rem;
   border-bottom: 0.0625rem #e5eaef solid;
+  position: sticky;
+  top: 0;
+  z-index: 15;
+  transition: all 0.5s ease-in-out;
+
+  &.scrolled {
+    background-color: white;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+  }
+
   .right {
     @include flexCenter;
     justify-content: space-between;
