--- a/app/components/sidebar/Sidebar.module.scss
+++ b/app/components/sidebar/Sidebar.module.scss
@@ -2,7 +2,7 @@
   padding: 1.25rem;
   border-right: 1px solid #ebecf2;
   background: #f7f8fa;
-  min-height: 100vh;
+  //   min-height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
