--- a/app/components/dashboard/Dashboard.module.scss
+++ b/app/components/dashboard/Dashboard.module.scss
@@ -1,7 +1,8 @@
 .dashboard_container {
   margin-left: 5.5rem;
 
-  .top_content {
+  .top_content,
+  .bottom_content {
     display: flex;
     align-items: center;
   }
