--- a/app/components/header/Header.module.scss
+++ b/app/components/header/Header.module.scss
@@ -24,6 +24,10 @@
     background-color: white;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
   }
+  &.dark {
+    background-color: #0f172a;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+  }
 
   .right {
     @include flexCenter;
