--- a/app/components/platforms/Platforms.module.scss
+++ b/app/components/platforms/Platforms.module.scss
@@ -10,6 +10,8 @@
   height: 29rem;
   overflow-y: scroll;
   margin-bottom: 1.25rem;
+  border-radius: 0.5rem;
+  border: 1px solid #edf2f7;
 
   &::-webkit-scrollbar {
     width: 3px;
