--- a/app/components/chart/Chart.module.scss
+++ b/app/components/chart/Chart.module.scss
@@ -1,5 +1,6 @@
 .chart_container {
-  width: 50.375rem;
+  // width: 50.375rem;
+  width: 100%;
   border-radius: 0.875rem;
   border: 1px solid #edf2f7;
   background: #fff;
@@ -84,11 +85,30 @@
   }
 
   .bottom {
-    // overflow-x: scroll;
     display: flex;
     // align-items: flex-end;
+    overflow-x: scroll;
+    &::-webkit-scrollbar {
+      height: 3px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+
+    /* Handle styles */
+    &::-webkit-scrollbar-thumb {
+      background: #34caa5;
+      border-radius: 6px;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
 
     // align-items: ;
+    width: 100%;
     ul {
       display: flex;
       flex-direction: column;
@@ -108,6 +128,7 @@
 
     .baring {
       position: relative;
+      width: 100%;
       .lines {
         width: 100%;
         display: flex;
@@ -127,7 +148,7 @@
       .char {
         display: flex;
         align-items: flex-end;
-        // justify-content: space-between;
+        justify-content: space-between;
         height: 19rem;
         width: 100%;
         margin-left: 2rem;
@@ -244,7 +265,7 @@
         .jun {
           .bars {
             .bar {
-              height: 15.25rem;
+              height: 14.25rem;
             }
           }
         }
