--- a/app/components/dashboard/Dashboard.module.scss
+++ b/app/components/dashboard/Dashboard.module.scss
@@ -1,9 +1,34 @@
 .dashboard_container {
-  margin-left: 5.5rem;
+  margin-left: 5.9rem;
+  min-height: 100vh;
+
+  @media (max-width: 789px) {
+    margin-left: 0;
+  }
+
+  .mobile_nav {
+    display: none;
+    width: 100%;
+    overflow-x: scroll;
+
+    @media (max-width: 789px) {
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      margin-top: 1.5rem;
+      // gap: 1.5rem;
+    }
+  }
 
   .top_content,
   .bottom_content {
     display: flex;
     align-items: center;
+    padding-right: 2rem;
+
+    @media (max-width: 1230px) {
+      flex-direction: column;
+      padding: 0 2rem;
+    }
   }
 }
