--- a/app/components/header/Header.module.scss
+++ b/app/components/header/Header.module.scss
@@ -13,6 +13,7 @@
 .header {
   @include flexCenter;
   justify-content: space-between;
+  gap: 1.31rem;
   padding: 1.12rem 1.25rem;
   border-bottom: 0.0625rem #e5eaef solid;
   position: sticky;
@@ -32,8 +33,7 @@
   .right {
     @include flexCenter;
     justify-content: space-between;
-    width: 50.625rem;
-
+    flex: 60%;
     h1 {
       color: #26282c;
       font-family: 'Plus Jakarta Sans' sans-serif;
@@ -49,9 +49,15 @@
       background: #fff;
       padding: 0.75rem;
       width: 21.8rem;
+      @media (max-width: 1300px) {
+        display: none;
+      }
       img {
         position: absolute;
         top: 0.92rem;
+        @media (max-width: 1300px) {
+          top: 50%;
+        }
       }
 
       input {
@@ -60,13 +66,16 @@
         width: 100%;
         padding-left: 1.8rem;
         outline: none;
+        @media (max-width: 1300px) {
+          display: none;
+        }
       }
     }
   }
   .left {
     @include flexCenter;
     justify-content: space-between;
-    width: 30.5rem;
+    flex: 42%;
     gap: 1.25rem;
 
     .calender,
@@ -89,8 +98,17 @@
           font-weight: 500;
           line-height: 1.375rem; /* 157.143% */
           margin-right: 1.25rem;
+          @media (max-width: 1300px) {
+            display: none;
+          }
         }
       }
+    }
+
+    .notification {
+      padding: 0.5rem;
+      width: 2.5rem;
+      height: 2.5rem;
     }
 
     .profile {
@@ -103,16 +121,22 @@
         text-align: right;
         margin-right: 0.75rem;
 
+        @media (max-width: 1300px) {
+          display: none;
+        }
         h4 {
           color: #26282c;
-          font-size: 0.95rem;
           @include fontFormat;
+          font-size: 0.95rem;
         }
 
         p {
           color: #787486;
           font-size: 0.8rem;
           @include fontFormat;
+          @media (max-width: 1300px) {
+            font-size: 0.5rem;
+          }
         }
       }
     }
