--- a/app/components/orders/Order.module.scss
+++ b/app/components/orders/Order.module.scss
@@ -1,11 +1,31 @@
 .order_container {
-  width: 50.375rem;
+  width: 100%;
   border-radius: 0.875rem;
   border: 1px solid #edf2f7;
   background: #fff;
   padding: 1.25rem 1.25rem 0;
   margin: 0 1.25rem 1.25rem;
-  // height: 26.375rem;
+  overflow-x: scroll;
+
+  &::-webkit-scrollbar {
+    height: 3px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle styles */
+  &::-webkit-scrollbar-thumb {
+    background: #34caa5;
+    border-radius: 6px;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
   .head {
     width: 100%;
     display: flex;
