--- a/app/components/tabs/Tabs.module.scss
+++ b/app/components/tabs/Tabs.module.scss
@@ -2,4 +2,16 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1.3rem;
+  width: 70%;
+
+  @media (max-width: 1230px) {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+  @media (max-width: 550px) {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.3rem;
+  }
 }
